Fixed the scroll issue of the login on small screens, added in some logic for the calculation of width for the graph

--- a/app/css/gsa.scss
+++ b/app/css/gsa.scss
@@ -51,6 +51,7 @@ footer {
       	background-size: cover;
     	height: 100vh;
         margin: 0;
+        overflow: auto;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -501,4 +502,10 @@ footer {
     from { opacity: 0; }
     to   { opacity: 1; }
 
+}
+
+@media (max-width: 375px) {
+    #graph {
+        width: 375px;
+    }
 }
